<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- 标题布局 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verifyphonecode_topMargin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backbtn"
            android:src="@drawable/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/> <!-- 图片按钮透明 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/majorchoosing_title"
            android:textColor="@color/black" />

        <Button
            android:src="@drawable/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/majorchoosing_nextStep"
            android:textSize="25sp"
            android:textColor="@color/skyblue"
            android:background="#00000000"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/majorchoosing_leftMargin"
        android:layout_marginRight="@dimen/majorchoosing_rightMargin"
        android:layout_marginTop="@dimen/majorchoosing_topMargin"
        android:orientation="vertical"
        >
        <!-- 学科布局 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/majorchoosing_subject"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="5">
                <EditText
                    android:id="@+id/subjectEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:inputType="phone"
                    android:background="@drawable/majorbtn"
                    android:maxLength="30"/>
            </LinearLayout>
        </LinearLayout>
        <!-- 专业布局 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/majorchoosing_subjectTopMargin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/majorchoosing_major"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="5">
                    <EditText
                        android:id="@+id/majorEditText"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:inputType="phone"
                        android:background="@drawable/majorbtn"
                        android:maxLength="30"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/majorchoosing_topMargin"
        android:gravity="center" >

        <Button
            android:src="@drawable/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/majorchoosing_cancel"
            android:textSize="25sp"
            android:textColor="@color/skyblue"
            android:background="#00000000"
            style="?android:attr/borderlessButtonStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:src="@drawable/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/majorchoosing_finish"
            android:textSize="25sp"
            android:textColor="@color/skyblue"
            android:background="#00000000"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <NumberPicker
            android:id="@+id/subjectpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/majorpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>
